tests/invalid/Native_Invalid_1.whiley

native export function f(int x) -> int

native export function f(int[] x) -> int
